--- a/DMS-Sender/Views/Home/Index.cshtml
+++ b/DMS-Sender/Views/Home/Index.cshtml
@@ -4,6 +4,8 @@
 
 @model AuthModel
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 <div class="text-center">
 
     <section class="vh-100">
@@ -47,8 +49,16 @@
                   {
                      <tr style="border-bottom:1px solid #eee">
                        <td style="text-align:left">@item.Action</td>
-                       <td style="text-align:right">@item.Status</td>
-                        <td style="text-align:right">@item.Exception</td>
+                       <td style="text-align:right">@if (item.Status)
+                                                {
+                                                    <i class="fa fa-circle" style="font-size:24px;color:green"></i>
+                                                }
+                                                else
+                                                {
+                                                    <i class="fa fa-circle" style="font-size:24px;color:red"></i>
+                                                }
+                                            </td>
+                                            <td style="text-align:right">@item.Exception</td>
                      </tr>
                   }  
                   }
@@ -60,65 +70,5 @@
       </div>
     </div>
   </div>  
-</section>
-
-
-
-
-
-    <section class="vh-100">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-6 text-black">
-
-        <div class="px-5 ms-xl-4">
-          <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
-          <span class="h1 fw-bold mb-0">Logo</span>
-        </div>
-
-        <div class="d-flex align-items-center h-custom-2 px-5 ms-xl-4 mt-5 pt-5 pt-xl-0 mt-xl-n5">
-
-          <form style="width: 23rem;" enctype="multipart/form-data" method="post" asp-controller="Home" asp-action="FileUpload">
-
-            <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Log in</h3>
-
-            <div class="form-outline mb-4">
-              <input type="email" id="form2Example18" class="form-control form-control-lg" />
-              <label class="form-label" for="form2Example18">Email address</label>
-            </div>
-
-            <div class="form-outline mb-4">
-              <input type="password" id="form2Example28" class="form-control form-control-lg" />
-              <label class="form-label" for="form2Example28">Password</label>
-            </div>
-             
-
-            <div class="pt-1 mb-4">
-              <button class="btn btn-info btn-lg btn-block" type="button">Login</button>
-            </div>           
-
-          </form>
-
-        </div>
-
-      </div>
-      <div class="col-sm-6 px-0 d-none d-sm-block">
-        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/img3.webp" alt="Login image" class="w-100 vh-100" style="object-fit: cover; object-position: left;">
-      </div>
-    </div>
-  </div>
-</section>
-   
-    @*<form enctype="multipart/form-data" method="post" asp-controller="Home" asp-action="FileUpload">
-    <dl>
-        <dt>
-            <label>Upload file</label>
-        </dt>
-        <dd>
-            <input name="file" type="file">            
-        </dd>
-    </dl>
-    <input type="submit" value="Upload" />
-    </form>*@
- 
+</section> 
 </div>
